--- a/web/gestionHumana/registrarnomina.html
+++ b/web/gestionHumana/registrarnomina.html
@@ -76,7 +76,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
       <!-- Brand Logo -->
       <a href="#" class="brand-link">
-        <img src="../img/beer.png" alt="SILEG Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+        <img src="../img/beer.png" alt="SILEG Logo" class="brand-image img-circle elevation-3" style="opacity: .8"/>
         <span class="brand-text font-weight-light">SILEG</span>
       </a>
 
