--- a/web/Ventas/registroVenta.xhtml
+++ b/web/Ventas/registroVenta.xhtml
@@ -43,11 +43,6 @@
                     </div>
                 </form>
 
-                <!-- Right navbar links -->
-
-                <!-- Notifications Dropdown Menu -->
-
-
                 <ul class="navbar-nav ml-auto">                
                     <li>
                         <h:form id="salir">  
@@ -57,7 +52,6 @@
                         <a class="logout" onclick="$('#salir\\:link').click()" ><i
                                 class="fas fa-sign-out-alt"></i></a>
                     </li>
-
                 </ul>
 
             </nav>
@@ -73,10 +67,10 @@
                     <!-- Sidebar user panel (optional) -->
                     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                         <div class="image">
-                            <img src="../img/bri.jpg" class="img-circle elevation-2" alt="User Image"/>
+                            <img src="" class="img-circle elevation-2" alt="User Image"/>
                         </div>
                         <div class="info">
-                            <a href="#" class="d-block">Brian Olarte</a>
+                            <a href="#" class="d-block"></a>
                             <p class="text-center" style="font-family: Roboto; color: white;" >Admin</p>
                         </div>
                     </div>
@@ -95,30 +89,22 @@
                                 </a>
                                 <ul class="nav nav-treeview">
                                     <li class="nav-item">
-                                        <a href="registrarVenta.xhtml" class="nav-link">
-                                            <p>Ventas</p>
+                                        <a href="../Administrador/usuarios.xhtml" class="nav-link">
+                                            <p>Usuarios</p>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="canjepuntos.html" class="nav-link">
-                                            <p>Canje de puntos</p>
+                                        <a href="/Ventas/registroVenta.xhtml" class="nav-link">
+                                            <p>RegistrarVenta</p>
                                         </a>
                                     </li>
-                                    <li class="nav-item">
-                                        <a href="inventarios.html" class="nav-link">
-                                            <p>Inventarios</p>
-                                        </a>
-                                    </li>
+
                                     <li class="nav-item">
                                         <a href="fidelizacion-admin.html" class="nav-link">
                                             <p>Fidelización</p>
                                         </a>
                                     </li>
-                                    <li class="nav-item">
-                                        <a href="usuarios.html" class="nav-link">
-                                            <p>Usuarios</p>
-                                        </a>
-                                    </li>
+
                                     <li class="nav-item">
                                         <a href="reportes.html" class="nav-link">
                                             <p>Reportes</p>
@@ -129,7 +115,6 @@
                         </ul>
                     </nav>
                     <!-- /.sidebar-menu -->
-
                 </div>
                 <!-- /.sidebar -->
             </aside>
